--- a/GoErgoUI/GoErgoUI.csproj
+++ b/GoErgoUI/GoErgoUI.csproj
@@ -52,11 +52,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebCamWorker.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -86,6 +95,10 @@
     <Content Include="face.jpg" />
     <Content Include="leg.jpg" />
     <Content Include="Resources\back.jpg" />
+    <None Include="Resources\Bing_logo_%282013%29.svg.png" />
+    <Content Include="Resources\laptop.jpg" />
+    <None Include="Resources\OpenEye.jpg" />
+    <None Include="Resources\ClosedEye.jpg" />
     <None Include="Resources\back1.jpg" />
     <None Include="Resources\leg.jpg" />
     <None Include="Resources\face.jpg" />
