--- a/GoErgoUI/GoErgoUI.csproj
+++ b/GoErgoUI/GoErgoUI.csproj
@@ -100,6 +100,7 @@
     <None Include="Resources\Bing_logo_%282013%29.svg.png" />
     <None Include="Resources\back1.png" />
     <None Include="Resources\face.png" />
+    <None Include="Resources\Bing_logo.png" />
     <Content Include="Resources\laptop.jpg" />
     <None Include="Resources\OpenEye.jpg" />
     <None Include="Resources\ClosedEye.jpg" />
